# folder_finder

./: Cargo.toml  README.md  install.sh
src/: auto_tags.rs  collections.rs  database.rs  main.rs  projects.rs  tags.rs  types.rs
